--- a/contact.html
+++ b/contact.html
@@ -36,35 +36,46 @@
 		<!--Script en fin de page-->
 	</head>
 <body>
-<!-- Principal conteneur -->
-<div class="page-container">
-    
-<!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
-	<div class="container bloc-sm">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
+	<!--indentation général-->
+	<!-- Principal conteneur -->
+	<div class="page-container">
+			
+		<!-- bloc-0 -->
+		<div class="bloc bgc-white l-bloc " id="bloc-0">
+			<div class="container bloc-sm">
+	
+				<nav class="navbar row">
+					<div class="navbar-header">
+						<!--rm div keywords-->
+						<!--modif alt and img txt logo-->
+						<a class="navbar-brand" href="index.html">
+							<img src="img/logo_nav.png" alt="logo chouette" height="40" />
+							La chouette agence
+						</a>
+						<!--rm div keywords-->
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					</div>
+					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+						<ul class="site-navigation nav navbar-nav">
+							<li>
+								<a href="index.html">Accueil</a>
+							</li>
+							<!--rm balise li superflux-->
+							<li>
+								<!--change page2 -> Contact-->
+								<a href="contact.html">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
 			</div>
-			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-				<ul class="site-navigation nav navbar-nav">
-					<li>
-						<a href="index.html">Accueil</a>
-					</li>
-					<li>
-					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-</div>
-<!-- bloc-0 END -->
+		</div>
+		<!-- bloc-0 END -->
 
 <!-- bloc-6 -->
 <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
