--- a/index.html
+++ b/index.html
@@ -74,25 +74,29 @@
 			</nav>
 		</div>
 	</div>
-<!-- bloc-0 END -->
+	<!-- bloc-0 END -->
 
-<!-- bloc-1-presentation -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-	<div class="container bloc-lg">
-		<div class="row tight-width-whitespace">
-			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
-				<h1 class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
-				</h1>
-				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+	<!-- bloc-1-presentation -->
+	<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+		<div class="container bloc-lg">
+			<div class="row tight-width-whitespace">
+				<div class="col-sm-12">
+					<!-- change alt logo-->
+					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo représentant une  chouette" />
+					<!-- rm . , bonne pratique h1..-->
+					<!-- change contrast-->
+					<h1 class="text-center hero-bloc-text tc-white ">
+						La chouette agence
+					</h1>
+					<div class="text-center">
+						<!-- change name url-->
+						<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-<!-- bloc-1-presentation END -->
+	<!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
