--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<!-- rm img, rédaction titre h2-->
+				<h2>
+					La chouette agence est une agence de Webdesign qui aide<br />
+					les entreprises à devenir attractives et visibles sur internet.
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -141,10 +145,17 @@
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg voffset">
+		<div class="row voffset-lg voffset ">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<!--rm image textuel, rédaction de la citation-->
+				<!--blockquote pour une citation-->
+				<blockquote>
+					"La chouette agence est une excellente agence web ! Les<br />
+					Web Designers ont réussi à capturer l'essence de notre<br />
+					entreprise et à l'intégrer à notre site. Cela nous a aidés à<br />
+					doubler nos ventes en ligne à Lyon."
+				</blockquote>
+				<p>Maxime Guibard, PDG de À vos fourchettes</p>
 			</div>
 		</div>
 	</div>
