opti page contact

--- a/contact.html
+++ b/contact.html
@@ -35,159 +35,173 @@
 		<title>Contactez-nous | Entreprise web design Lyon</title>
 		<!--Script en fin de page-->
 	</head>
-<body>
-	<!--indentation général-->
-	<!-- Principal conteneur -->
-	<div class="page-container">
-			
-		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
-			<div class="container bloc-sm">
-	
-				<nav class="navbar row">
-					<div class="navbar-header">
-						<!--rm div keywords-->
-						<!--modif alt and img txt logo-->
-						<a class="navbar-brand" href="index.html">
-							<img src="img/logo_nav.png" alt="logo chouette" height="40" />
-							La chouette agence
-						</a>
-						<!--rm div keywords-->
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
-							<!--rm balise li superflux-->
-							<li>
-								<!--change page2 -> Contact-->
-								<a href="contact.html">Contact</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</div>
-		<!-- bloc-0 END -->
-
-<!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
-					Parlons web design !
-				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
-					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-				</p>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-6 END -->
-
-<!-- bloc-7 -->
-<div class="bloc bgc-white l-bloc" id="bloc-7">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-					<div class="form-group">
-						<label>
-							Nom
-						</label>
-						<input id="name" class="form-control" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Adresse email
-						</label>
-						<input id="email" class="form-control" type="email" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Comment nous avez-vous connu ?
-						</label>
-						<input class="form-control" type="email" required id="input_504" />
-					</div>
-					<div class="form-group">
-						<label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Envoyer
-					</button>
-				</form>
-			</div>
-			<div class="col-sm-6">
-				<p>
-					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-7 END -->
-
-<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
-
-
-<!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<div class="container bloc-sm">
-		<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+	<body>
+		<!--indentation général-->
+		<!-- Principal conteneur -->
+		<div class="page-container">
+			<!-- bloc-0 -->
+			<div class="bloc bgc-white l-bloc " id="bloc-0">
+				<div class="container bloc-sm">
+					<nav class="navbar row">
+						<div class="navbar-header">
+							<!--rm div keywords-->
+							<!--modif alt and img txt logo-->
+							<a class="navbar-brand" href="index.html">
+								<img src="img/logo_nav.png" alt="logo chouette" height="40" />
+								La chouette agence
+							</a>
+							<!--rm div keywords-->
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
 						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+							<ul class="site-navigation nav navbar-nav">
+								<li>
+									<a href="index.html">Accueil</a>
+								</li>
+								<!--rm balise li superflux-->
+								<li>
+									<!--change page2 -> Contact-->
+									<a href="contact.html">Contact</a>
+								</li>
+							</ul>
 						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+					</nav>
+				</div>
+			</div>
+			<!-- bloc-0 END -->
+			<!-- bloc-6 -->
+			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-6">
+				<!--change contrast-->
+				<div class="container bloc-lg">
+					<div class="row">
+						<div class="col-sm-12">
+							<h1 class="text-center hero-bloc-text tc-white">
+								Parlons web design !
+							</h1>
+							<p class="text-center mg-lg  tight-width-whitespace">
+								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+							</p>
 						</div>
 					</div>
 				</div>
 			</div>
+			<!-- bloc-6 END -->
+
+			<!-- bloc-7 -->
+			<div class="bloc bgc-white l-bloc" id="bloc-7">
+				<div class="container bloc-md">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="col-md-6">
+								<!--up formulaire for action -->
+								<form method="post" 
+											action="includes/form_1.php" id="form_1" 
+											novalidate success-msg="Your message has been sent."
+											fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+									<div class="form-group">
+										<label for="name">Nom</label>
+										<input id="name" name="name" class="form-control" type="text"/>
+									</div>
+									<div class="form-group">
+										<label for="email">
+											Adresse email
+										</label>
+										<input id="email" name="email" class="form-control" type="email" required autofocus/>
+									</div>
+									<div class="form-group">
+										<label for="info"> Comment nous avez-vous connus ?</label>
+										<select name="info" id="info">
+											<option value="connaissance">Part une connaissance.</option>
+											<option value="web" selected>En navigant sur Internet.</option>
+											<option value="réseaux sociaux">En surfant sur les réseaux sociaux.</option>
+										</select>
+									
+									</div>
+									<div class="form-group">
+										<label for="message">
+											Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+										</label>
+										<textarea id="message"
+															name="message"
+															class="form-control" 
+															minlength="10"
+															rows="4" cols="50" required>
+										</textarea>
+									</div> 
+									<input class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" value="Envoyer">
+									</input>
+								</form>
+							</div>
+							<!--++access fiche contact"-->
+							<div class="col-md-6 contact">
+								<p class="lk">
+									<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a>
+									<a href="https://www.google.com/maps/place/2+Place+Sathonay,+69001+Lyon/@45.7695241,4.8279786,17z/data=!3m1!4b1!4m5!3m4!1s0x47f4eb020f3664e9:0x13e3d71752922c1f!8m2!3d45.7695241!4d4.8301673">2 place Sathonay 69001 Lyon
+									</a>
+								</p>
+								<p class="horaire">Ouvert de 9h à 18h, du lundi au vendredi</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- bloc-7 END -->
+			<!-- ScrollToTop Button -->
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<!-- ScrollToTop Button END-->
+			<!-- Footer - bloc-8 -->
+			<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+				<div class="container bloc-sm">
+					<div class="row">
+						<div class="col-xs-12">
+							<p class="text-center white">
+								<!--rm br inutile-->
+								La chouette agence - Agence web basée à Lyon.
+							</p>
+							<!--lien vers les réseaux sociaux correspondant-->
+							<div class="row row-no-gutters social">
+								<!--col xs pour garder le display en mobile-->
+								<div class="col-xs-3">
+									<div class="text-center">
+										<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+									</div>
+								</div>
+								<div class="col-xs-3">
+									<div class="text-center">
+										<a class="social" href="https://facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+									</div>
+								</div>
+								<div class="col-xs-3">
+									<div class="text-center">
+										<a class="social" href="https://dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
+									</div>
+								</div>
+								<div class="col-xs-3">
+									<div class="text-center">
+										<a class="social" href="https://instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+									</div>
+								</div>
+								<!--rm keywords-->
+							</div>
+							<!--rm patenaires, annuaires-->
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Footer - bloc-8 END -->
 		</div>
-	</div>
-</div>
-<!-- Footer - bloc-8 END -->
-
-</div>
-<!-- Principal conteneur END -->
-<!--modif name files .js-->
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js"></script>
-<script src="./js/jqBootstrapValidation.js"></script>
-<script src="./js/formHandler.js"></script>   
-
-</body>
+		<!-- Principal conteneur END -->
+		<!--modif name files .js-->
+		<script src="./js/jquery-2.1.0.js"></script>
+		<script src="./js/bootstrap.js"></script>
+		<script src="./js/blocs.js"></script>
+		<script src="./js/jqBootstrapValidation.js"></script>
+		<script src="./js/formHandler.js"></script>
+	</body>
 </html>
