--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
 							</h2>
 						</div>
 					</div>
-					<!--indentation, rename image / alt / type, compress and resize-->
+					<!--indentation, rm-href rename image / alt / type, compress and resize-->
 					<!--img center mobile-->
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a	href="#" 
+							<a	 
 								 	data-lightbox="img/journal_light.jpg"				data-gallery-id="gallery-1"
 								 	data-caption="Refonte d'un site web pour un journal local" 
 								 	data-frame="snapshot-lb">
@@ -208,7 +208,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a 	href="#"
+							<a 	
 									data-lightbox="img/photographe_light.jpg" 								 data-gallery-id="gallery-1"
 									data-caption="Création d'un site web pour photographes"
 									data-frame="snapshot-lb">
@@ -226,7 +226,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a 	href="#"
+							<a 
 									data-lightbox="img/stuffVoyageur_light.jpg"   data-gallery-id="gallery-1"
 									data-caption="Création d'un site internet pour un voyageur"
 									data-frame="snapshot-lb">
@@ -242,7 +242,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a	href="#"
+							<a	
 									data-lightbox="img/organisationMariage_light.jpg" 				 data-gallery-id="gallery-1"
 								 	data-caption="Conception d'un site pour une agence de mariage"
 								 	data-frame="snapshot-lb">
