--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="row voffset-lg voffset ">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+					<div class="col-sm-12 text-center">
 							<!--rm image textuel, rédaction de la citation-->
 							<!--blockquote pour une citation-->
 							<blockquote>
@@ -152,7 +151,6 @@
 								doubler nos ventes en ligne à Lyon."
 							</blockquote>
 							<p>Maxime Guibard, PDG de À vos fourchettes</p>
-						</div>
 					</div>
 				</div>
 			</div>
