--- a/contact.html
+++ b/contact.html
@@ -100,10 +100,7 @@
 						<div class="col-sm-12">
 							<div class="col-md-6">
 								<!--up formulaire for action -->
-								<form method="post" 
-											action="includes/form_1.php" id="form_1" 
-											novalidate success-msg="Your message has been sent."
-											fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+								<form method="post" action="includes/form_1.php" id="form_1" novalidate>
 									<div class="form-group">
 										<label for="name">Nom</label>
 										<input id="name" name="name" class="form-control" type="text"/>
@@ -134,8 +131,7 @@
 															rows="4" cols="50" required>
 										</textarea>
 									</div> 
-									<input class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" value="Envoyer">
-									</input>
+									<input class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" value="Envoyer" />
 								</form>
 							</div>
 							<!--++access fiche contact"-->
