--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<a class="navbar-brand" href="index.html">
 								<img src="img/logo_nav.png" alt="logo chouette" height="40" />
 								La chouette agence
-							</a>
+				glo			</a>
 							<!--rm div keywords-->
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span>
