regroup css and min css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<meta property="og:image" content="https://gregouz3.github.io/P4/img/logo.png" />
 		<!--indentation-->
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 		<!--police google fonts txt boutton nav-->
