--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
 			<!-- Footer - bloc-8 END -->
 		</div>
 		<!-- Principal conteneur END -->
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<!-- Global site tag (gtag.js) - Google Analytics ->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163669845-2"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -201,7 +201,7 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-163669845-2');
 		</script>
-		<!--modif name files .js-->
+		<!-modif name files .js-->
 		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
 		<script src="./js/blocs.js"></script>
