--- a/contact.html
+++ b/contact.html
@@ -165,22 +165,22 @@
 								<!--col xs pour garder le display en mobile-->
 								<div class="col-xs-3">
 									<div class="text-center">
-										<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+										<a  href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-xs-3">
 									<div class="text-center">
-										<a class="social" href="https://facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+										<a  href="https://facebook.com"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-xs-3">
 									<div class="text-center">
-										<a class="social" href="https://dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
+										<a  href="https://dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-xs-3">
 									<div class="text-center">
-										<a class="social" href="https://instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+										<a  href="https://instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 								<!--rm keywords-->
