--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 			</div>
 			<!-- Footer - bloc-8 END -->
 		</div>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<!-- Global site tag (gtag.js) - Google Analytics ->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163669845-2"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -329,7 +329,7 @@
 
 			gtag('config', 'UA-163669845-2');
 		</script>
-		<!-- Principal conteneur END -->
+		<!- Principal conteneur END -->
 		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
 		<script src="./js/blocs.js"></script>
