--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 		<!-- ++accessibilité-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<!--rédaction description-->
-		<meta name="description" content="Contactez l'entreprise de webdesign, la chouette agence de web design situé Lyon en envoyant le formulaire." />
+		<meta name="description" content="Contactez l'entreprise de webdesign, la chouette agence située à Lyon en remplissant le formulaire ci-dessous." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<!--modification type favicon en png-->
 		<link rel="shortcut icon"  href="favicon.png" type="image/png" />
