--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- ++accessibilité-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<!--rédaction description-->
-		<meta name="description" content="L'entreprise de webdesign, la chouette agence de web design situé Lyon aide les entreprises à devenir attractives et visibles sur Internet en capturant l'essence même de votre entreprise et l'intégrer à votre site." />
+		<meta name="description" content="L'entreprise de webdesign, la chouette agence située à Lyon aide les entreprises à devenir attractives et visibles sur Internet." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<!--index and  crawling for google-->
 		<meta name="robots" content="index, follow" />
