--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						<div class="col-sm-12 text-center">
 							<!--rm img, rédaction h2-->
 							<h2>Nous travaillons avec beaucoup de clients,<br>
-									voici nos &nbsp;réalisations.
+									voici nos réalisations.
 							</h2>
 						</div>
 					</div>
